--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@ body{
    border-radius: 10px;
 }
 
+.section2{
+    background-image: linear-gradient(#363636b7,#4d4d4d21);
+    border-radius: 10px;
+}
+
 .masterCard{
     background-image: linear-gradient(#363636,#4D4D4D);
     border: 1px solid #747178;
