add slider functionality and solve landing page image issue

--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -1,5 +1,5 @@
 .bgImage{
-    background-image: url('landing-bg.png');
+    background-image: url('../../public/landing-bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
